manifest/hellokoverse/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellokoverse
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    name: hellokoverse
